Many layout bugfixes and added contact modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,6 +187,15 @@ input, select, textarea {
 		opacity: 1;
 	}
 	
+	.gold {
+		text-shadow: 0 0 1em rgba(255,255,255,1);
+		color: orange;
+		-webkit-text-fill-color: transparent;
+		-webkit-background-clip: text;
+		background-color: orange;
+		-webkit-text-stroke: 1px rgba(0,0,0,0.2);
+		font-weight: 300;
+	}
 	
 	
 	@media screen and (max-width: 980px) {
@@ -195,6 +204,7 @@ input, select, textarea {
 		}
 
 		.mobileonly {
+			position: relative;
 			display: inline-block;
 		}
 	}
@@ -391,7 +401,7 @@ input, select, textarea {
 	
 
 	body, input, select, textarea {
-		font-family: 'Arima', cursive, "Source Sans Pro", Helvetica, sans-serif;
+		font-family: 'Arima', "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 1rem;
 		font-weight: 200;
 		line-height: 1.65;
@@ -8442,20 +8452,14 @@ input, select, textarea {
 			margin: auto;
 			text-align: left;
 		}
-				
-		.tooltip {
-			cursor: pointer;
-		   width: 80%;
-		   display:none;
-		   position:absolute;
-		   border:1px solid white;
-		   background-color: rgba(37, 53, 40, 1);
-		   border-radius:5px;
-		   padding:10px;
-		   color:#fff;
-		   text-align: justify-content;
-		   font-size: 1em;
+		
+		#team {
+			overflow-y: none;
 		}
+		#team .content {
+			overflow-y: none;
+		}
+		
 		
 
 		@media screen and (max-width: 1280px) {
@@ -8465,6 +8469,15 @@ input, select, textarea {
 		}
 	
 		@media screen and (max-width: 980px) {	
+
+			#team {
+				width: 100%;
+			}
+			
+			#team .content {
+				width: 100%;
+			}
+			
 			.profiledesc {
 				display: none;
 			}
@@ -9011,6 +9024,7 @@ input, select, textarea {
 		top: 0;
 		visibility: hidden;
 		width: 100%;
+		z-index: 11;
 	}
 
 		.modal .inner {
@@ -9027,11 +9041,11 @@ input, select, textarea {
 			background: white;
 			border-radius: 5px;
 			display: block;
-			max-width: 100%;
+			min-height: 250px;
+			max-width: 70%;
 			max-height: 85%;
 			opacity: 0;
 			position: relative;
-			width: 60%;
 		}
 		
 		.profile a {
@@ -9041,7 +9055,7 @@ input, select, textarea {
 		
 		.modal p {
 			text-align: justify;
-			font-size: 0.9em;
+			font-size: 1.0em;
 			line-height: 1.2em;
 		}
 		
@@ -9059,32 +9073,46 @@ input, select, textarea {
 
 		.modal .close {
 			position: absolute;
-			top: 15%;
-			left: 76%;
-			font-size: 2em;
+			right: 10px;
+			padding: 5px;
+			top: 0;
+			font-size: 1.7em;
 			z-index: 10;
-			padding: 0;
-			margin: 0;
 			background-color: transparent;
 		}
+		
 		
 		.modal .close:hover {
 			cursor: pointer;
 		}
 
-		@media screen and (max-width: 736px) {
 
+		@media screen and (max-width: 980px) {
 			.modal .inner {
-				width: 85%;
-				max-height: 75%;
+				max-width: 90%;
+			}
+			
+			.modal .inner p {
+				font-size: 1.2em;
+			}
+			
+			.modal .inner {
 				overflow-y: auto;
 				overflow-x: hidden;
 			}
+		}
+		
+		@media screen and (max-width: 480px) {
+			.modal .inner p {
+				font-size: 0.9em;
+			}
 
-				.modal .close {
-					left: 80%;
-				}
-
+			.modal .inner {
+				width: 100%;
+				max-height: 90%;
+				overflow-y: auto;
+				overflow-x: hidden;
+			}
 		}
 
 	body.is-modal-visible #page-wrapper {
@@ -9113,46 +9141,46 @@ input, select, textarea {
 
 
 
-.heading {
-    text-align: center;
-    color: #454343;
-    font-size: 30px;
-    font-weight: 700;
-    position: relative;
-    margin-bottom: 70px;
-    text-transform: uppercase;
-    z-index: 999;
-}
-.white-heading{
-    color: #ffffff;
-}
-.heading:after {
-    content: ' ';
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    height: 40px;
-    width: 180px;
-    border-radius: 4px;
-    transform: translateX(-50%);
-    background: url(img/heading-line.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.white-heading:after {
-    background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
+	.heading {
+		text-align: center;
+		color: #454343;
+		font-size: 30px;
+		font-weight: 700;
+		position: relative;
+		margin-bottom: 70px;
+		text-transform: uppercase;
+		z-index: 999;
+	}
+	.white-heading{
+		color: #ffffff;
+	}
+	.heading:after {
+		content: ' ';
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		height: 40px;
+		width: 180px;
+		border-radius: 4px;
+		transform: translateX(-50%);
+		background: url(img/heading-line.png);
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+	.white-heading:after {
+		background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
+		background-repeat: no-repeat;
+		background-position: center;
+	}
 
-.heading span {
-    font-size: 18px;
-    display: block;
-    font-weight: 500;
-}
-.white-heading span {
-    color: #ffffff;
-}
+	.heading span {
+		font-size: 18px;
+		display: block;
+		font-weight: 500;
+	}
+	.white-heading span {
+		color: #ffffff;
+	}
 
 
 	#benefits {
